Rewrite-functional
-tree parsed to all branches
-branched parsed to their keywords
-keywords inserting into table "branch"
-possible get all branches or branch by tree ID from swagger
-add cyberleninka library
